# monarch-phenotype-profile-ingest

./: .copier-answers.yml  .cruft.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  Makefile~  README.md  download.yaml  justfile  mkdocs.yaml  pyproject.toml
.github/workflows/: create-release.yaml  test.yaml
docs/: edges_report.tsv  index.md
scripts/: gene_to_phenotype_extras.py  gene_to_phenotype_publications.py  generate-rdf.py  generate-report.py  get-latest-report.py  write_metadata.py
src/: disease_mode_of_inheritance_transform.py  disease_mode_of_inheritance_transform.yaml  disease_to_phenotype_transform.py  disease_to_phenotype_transform.yaml  gene_to_disease_transform.py  gene_to_disease_transform.yaml  gene_to_phenotype_transform.py  gene_to_phenotype_transform.yaml  mondo_sssom_config.yaml  phenotype_ingest_utils.py  versions.py
src/monarch_phenotype_profile_ingest/: __init__.py  cli.py  disease_mode_of_inheritance_transform.py  disease_mode_of_inheritance_transform.yaml  disease_model_from_hpoa_transform.py  disease_model_from_hpoa_transform.yaml  disease_to_phenotype_transform.py  disease_to_phenotype_transform.yaml  download.yaml  gene_to_disease_transform.py  gene_to_disease_transform.yaml  gene_to_phenotype_transform.py  gene_to_phenotype_transform.yaml  metadata.yaml  mondo_sssom_config.yaml  (+1 more)
tests/: test_disease_mode_of_inheritance_transform.py  test_disease_to_phenotype_transform.py  test_example.py  test_gene_to_disease_transform.py  test_gene_to_phenotype_transform.py  test_phenotype_ingest_utils.py  test_versions.py
