[project]
name = "monarch-phenotype-profile-ingest"
version = "0.0.0"
description = "Monarch KG ingest for phenotypes from HPOA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "koza>=2.0.0",
    "kghub-downloader>=0.3.8",
    "biolink-model>=4.2.5rc2",
    "duckdb>=0.10.2",
    "loguru",
    "pronto>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D211",
    "D212",
    "D203",
    "F541",
    "S101",
]
fixable = ["ALL"]
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "S",
    "W",
]

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
